[package]
name = "gltf-ibl-sampler-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_more = "0.99"
image = "0.24"
libc = "0.2"
libc-stdhandle = "0.1"
log = "0.4"
rfd = "0.12"
ron = "0.8"
rust-i18n = "2"
serde = "1"
tempfile = "3"

[dependencies.eframe]
version = "0.27"
features = ["persistence"]

[dependencies.egui]
version = "0.27"
features = ["persistence"]

[build-dependencies]
bindgen = "0.69"
cc = "1"

[profile.dev.package.image]
opt-level = 2
